# DevDen

./: CONTRIBUTING.md  LICENSE
2024-2028/: README.md
2024-2028/Joshitha/: README.md
2024-2028/Joshitha/adaptive-inference-llm/: .gitignore  app.py  main.py  (+1 more)
2024-2028/Nishanth/: README.md
2024-2028/Nishanth/Taskify/Backend/: .env.example  auth.py  dependencies.py  main.py  models.py  pyproject.toml
2024-2028/Nishanth/Taskify/Backend/routers/: __init__.py  auth.py  documents.py  scheduler.py
2024-2028/Nishanth/Text Generation using rnn/: app.py  pyproject.toml  text-generation-train.ipynb  tokenizer.pkl
2024-2028/Nishanth/Text Generation using rnn/frontend/: index.html  script.js  style.css
2024-2028/Nishanth/edu-rag/: .gitignore  README.md  pyproject.toml
2024-2028/Nishanth/edu-rag/backend/: main.py
2024-2028/Nishanth/edu-rag/backend/models/: models.py
2024-2028/Nishanth/edu-rag/backend/routes/: routes.py
2024-2028/Nishanth/edu-rag/backend/services/: chat_service.py
2024-2028/Nishanth/edu-rag/backend/uploads/: .gitkeep
2024-2028/Nishanth/edu-rag/frontend/: package-lock.json
2024-2028/Nishanth/edu-rag/frontend/src/: App.tsx  index.css
2024-2028/Nishanth/edu-rag/frontend/src/components/: ChatConsole.tsx  DocumentList.tsx  InteractiveTree.tsx  NodeViewer.tsx  Uploader.tsx
2024-2028/Nishanth/edu-rag/tutorial/: Base_Tutorial.ipynb
2025-2029/: README.md
2025-2029/Adithyanandan/: .gitignore
2025-2029/Team Projects/: README.md
2025-2029/mohith/: README.md
dcos/: PROJECT_TEMPLATE.md
docs/: BATCH_TEMPLATE.md  MEMBER_TEMPLATE.md
(+841 files in other folders)
