[project]
name = "edu-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=2.5.0",
    "ipykernel>=7.2.0",
    "pageindex>=0.2.8",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
]
